--- a/fullStack/server2/package.json
+++ b/fullStack/server2/package.json
@@ -12,7 +12,9 @@
   "dependencies": {
     "bcryptjs": "^2.4.3",
     "cli": "^1.0.1",
+    "cors": "^2.8.5",
     "express": "^4.17.1",
-    "sequelize": "^6.6.5"
+    "sequelize": "^6.6.5",
+    "sequelize-mig": "^3.1.3"
   }
 }
