--- a/fullStack/server2/package.json
+++ b/fullStack/server2/package.json
@@ -1,7 +1,6 @@
 {
   "name": "server2",
   "version": "1.0.0",
-  "description": "",
   "main": "index.js",
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1"
@@ -14,7 +13,10 @@
     "cli": "^1.0.1",
     "cors": "^2.8.5",
     "express": "^4.17.1",
+    "nodemon": "^2.0.13",
     "sequelize": "^6.6.5",
     "sequelize-mig": "^3.1.3"
-  }
+  },
+  "devDependencies": {},
+  "description": ""
 }
